# PhysXEngine

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
Benchmarks/: ColisionBench.cpp  EngineBench.cpp  KdTreeBench.cpp  SATBench.cpp  SandboxBench.cpp  mainJobSystem.cpp
Engine/: CMakeLists.txt
Engine/include/: BSP.h  CircleCollider.h  Collider.h  Engine.h  Entity.h  KdTree.h  RectCollider.h  RigidBody.h  Utilities.h  Vector2D.h  VisualWorld.h
Engine/main/: main.cpp
Engine/src/: CircleCollider.cpp  Collider.cpp  Engine.cpp  Entity.cpp  KdNode.cpp  KdTree.cpp  RectCollider.cpp  RigidBody.cpp  Utilities.cpp  Vector2D.cpp  VisualWorld.cpp  main.cpp
Vectors/include/: Vector.h
Vectors/src/: Vector.cpp
